src/objects/Time_Record__c.object
<CustomObject>
    <description>Time can be associated to projects, team member assignments, and date ranges for project status, costing and other reporting purposes.  Both internal and external time can be tracked with a lookup to either a user or a contact record for internal staff or external contractors respectively.</description>
    <fields>
        <fullName>Actual_Cost__c</fullName>
        <formula>Hourly_Rate__c * Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contractor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Related to a contact record.</inlineHelpText>
        <label>Contractor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Time Records</relationshipLabel>
        <relationshipName>R00N80000002lYQJEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>End_Date__c  -  Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate__c</fullName>
        <label>Hourly Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hours_Per_Day__c</fullName>
        <formula>Hours__c  /  Duration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Per Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>PPM_Project__c</referenceTo>
        <relationshipLabel>Time Records</relationshipLabel>
        <relationshipName>R00N80000002lYkaEAE</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Team_Member_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member Assignment</label>
        <referenceTo>Team_Member__c</referenceTo>
        <relationshipLabel>Time Records</relationshipLabel>
        <relationshipName>R00N80000002lYkfEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Related to User Record.</inlineHelpText>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N80000002lYQIEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Status__c</fullName>
        <label>Time Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Request</label>
        <referenceTo>Work_Request__c</referenceTo>
        <relationshipLabel>Time Records</relationshipLabel>
        <relationshipName>Time_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Time Record</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Time Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>